--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Investment profit calculator</title>
+		<title>Investment's profit calculator</title>
 	</head>
 	<body>
 		Invest
