--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Investment profit calculator</title>
+
+		<link rel="shortcut icon" href="src/icon.ico" type="image/x-icon">
 	</head>
 	<body>
 		Invest
