--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<hr>
 		<button id="button-start">Compute</button>
 		<h3>Return: <span id="profit">0</span>€</h3>
-		<button id="button-reinvest">Reinvest profits (drop cents)</button>
+		<button id="button-reinvest">Reinvest (drop cents)</button>
 		<hr>
 		Investments: <span id="iteration-counter">0</span> <br>
 		Days passed (avoiding Pattern Day Trader flagging*): <span id="days-counter-pdt">0</span>
