added price inputs placeholder

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 		<strong>Buy</strong> for
 		<input type="number" placeholder="100" name="investment" id="investment">€
 		when the asset is valued at
-		<input type="number" name="start-price" id="start-price">€
+		<input type="number" placeholder="Entry price" name="start-price" id="start-price">€
 		with a
 		<input type="number" placeholder="0,25" name="buy-fee" id="buy-fee" min="0" max="100">% fee (min fee =
 		<input type="number" placeholder="1" name="buy-min-fee" id="buy-min-fee">€)
 		<hr>
 		<strong>Sell</strong> when the asset is valued at
-		<input type="number" name="end-price" id="end-price">€
+		<input type="number" placeholder="Exit price" name="end-price" id="end-price">€
 		with a
 		<input type="number" placeholder="0,25" name="sell-fee" id="sell-fee" min="0" max="100">% fee (min fee =
 		<input type="number" placeholder="1" name="sell-min-fee" id="sell-min-fee">€)
