added reinvestment options

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 		<hr>
 		<button id="button-start">Compute</button>
 		<h3>Return: <span id="profit">0</span>€</h3>
-		<button id="button-reinvest">Reinvest (drop cents)</button>
+		<button id="button-reinvest">Reinvest (drop cents)</button> <br>
+		Reinvest
+		<input type="number" placeholder="75" name="reinvest-percentage" id="reinvest-percentage">% of equity <br>
+		Add
+		<input type="number" placeholder="10" name="reinvest-add-amount" id="reinvest-add-amount">€ when reinvesting
 		<hr>
 		Investments: <span id="iteration-counter">0</span> <br>
 		Days passed (avoiding Pattern Day Trader flagging*): <span id="days-counter-pdt">0</span>
