--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 		<input type="number" placeholder="100" name="investment" id="investment">€
 		when the asset is valued at
 		<input type="number" placeholder="Entry price" name="start-price" id="start-price">€
-		with a
-		<input type="number" placeholder="0,25" name="buy-fee" id="buy-fee" min="0" max="100">% fee (min fee =
-		<input type="number" placeholder="1" name="buy-min-fee" id="buy-min-fee">€) <br><br>
+		<span class="fee-inputs">
+			with a
+			<input type="number" placeholder="0,25" name="buy-fee" id="buy-fee" min="0" max="100">% fee (min fee =
+			<input type="number" placeholder="1" name="buy-min-fee" id="buy-min-fee">€) <br><br>
+		</span>
+
 		<input type="checkbox" name="leverage-checkbox" id="leverage-checkbox">
 		<label for="leverage-checkbox">Using leverage?</label> <br>
 		Leverage multiplier:
@@ -23,9 +26,12 @@
 
 		<strong>Sell</strong> when the asset is valued at
 		<input type="number" placeholder="Exit price" name="end-price" id="end-price">€
-		with a
-		<input type="number" placeholder="0,25" name="sell-fee" id="sell-fee" min="0" max="100">% fee (min fee =
-		<input type="number" placeholder="1" name="sell-min-fee" id="sell-min-fee">€)
+		<span class="fee-inputs">
+			with a
+			<input type="number" placeholder="0,25" name="sell-fee" id="sell-fee" min="0" max="100">% fee (min fee =
+			<input type="number" placeholder="1" name="sell-min-fee" id="sell-min-fee">€)
+		</span>
+
 		<hr>
 
 		<button id="button-start">Compute</button>
