added basic styling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Investment profit calculator</title>
 
 		<link rel="shortcut icon" href="src/icon.ico" type="image/x-icon">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<h1>AwMan3703's ROI calculator</h1>
